# xgb_regression_simple

./: .gitignore  README.md  funcs.py  pyproject.toml  target_pred.csv
data/: blind_test_data.csv  training_data.csv
