[tool.poetry]
name = "wizeline-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"
numpy = "2.0.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
xgboost = "^2.1.4"
optuna = "^4.2.1"
ipywidgets = "^8.1.5"
llvmlite = "^0.44.0"
shap = "^0.46.0"
optuna-integration = "^4.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
